--- a/client/src/components/text-bubble/TextBubble.module.scss
+++ b/client/src/components/text-bubble/TextBubble.module.scss
@@ -1,7 +1,6 @@
 .TextBubble {
-  background: #0055ff;
   border-radius: 20px;
-  color: #fff;
-  padding: 6px 10px;
+  font-size: 1.0rem;
   margin: 10px 0;
+  padding: 6px 10px;
 }
