Add scroll and media query for phone group

--- a/client/src/App.module.scss
+++ b/client/src/App.module.scss
@@ -10,6 +10,11 @@
   .PhoneGroup {
     display: flex;
     justify-content: center;
+    overflow: scroll;
+
+    @media screen and (max-width: 850px) {
+      justify-content: flex-start;
+    }
 
     .PhoneContainer {
       padding: 20px;
